refactor: update PendingDelivery data model and enhance GatewayClient with command payload support and route policy options